[tool.poetry]
name = "why-bot"
version = "0.1.0"
description = ""
authors = ["FusionSid <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discordLevelingSystem = "^1.0.2"
discord = "^1.7.3"
"discord.py" = "^1.7.3"
discord-py-interactions = "^3.0.2"
pycord = "^0.0.1"
Flask = "^2.0.2"
cryptography = "^35.0.0"
requests = "^2.26.0"
asyncio = "^3.4.3"
youtube-search-python = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
