[tool.poetry]
name = "why-bot"
version = "0.1.0"
description = ""
authors = ["FusionSid <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discordLevelingSystem = "^1.0.2"
discord = "^1.7.3"
"discord.py" = "^1.7.3"
discord-py-interactions = "^3.0.2"
Flask = "^2.0.2"
cryptography = "^35.0.0"
youtube-search-python = "^1.4.9"
google-api-python-client = "^2.29.0"
googlesearch-python = "^1.0.1"
praw = "^7.4.0"
qrcode = "^7.3.1"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
gTTS = "^2.2.3"
mutagen = "^1.45.1"
Quart = "^0.15.1"
Quart-Discord = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"