[tool.poetry]
name = "why-bot"
version = "0.1.0"
description = ""
authors = ["FusionSid <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
discordLevelingSystem = "^1.0.2"
google-api-python-client = "^2.33.0"
gTTS = "^2.2.3"
lxml = "^4.7.1"
mutagen = "^1.45.1"
praw = "^7.5.0"
prawcore = "^2.3.0"
PyNaCl = "^1.4.0"
python-dotenv = "^0.19.2"
pyttsx3 = "^2.90"
qrcode = "^7.3.1"
requests = "^2.26.0"
urllib3 = "^1.26.7"
youtube_dl = "^2021.12.17"
youtube-search-python = "^1.5.3"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
Flask = "^2.0.2"
discord = "^1.7.3"
pycord = {extras = ["voice"], version = "^0.1.1"}
typing-extensions = "^4.0.1"
psutil = "^5.9.0"
easy-pil = "^0.1.3"
wget = "^3.2"
simpcalci = "^0.0.2"
discord-webhook = "^0.14.0"
numexpr = "^2.8.1"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
